# apps/server/generated/openapi.json
@@ -1122,6 +1122,10 @@
           "name": {
             "type": "string"
           },
+          "ownerUserId": {
+            "type": "string",
+            "format": "uuid"
+          },
           "ownerName": {
             "type": "string"
           },
@@ -1147,6 +1151,7 @@
         "required": [
           "id",
           "name",
+          "ownerUserId",
           "ownerName",
           "yours",
           "presence",
@@ -1378,8 +1383,9 @@
           "agentKind": {
             "type": "string"
           },
-          "machineName": {
-            "type": "string"
+          "machineId": {
+            "type": "string",
+            "format": "uuid"
           },
           "working": {
             "$ref": "#/components/schemas/Working"
@@ -1404,7 +1410,7 @@
         "required": [
           "id",
           "agentKind",
-          "machineName",
+          "machineId",
           "working",
           "offers",
           "messages"
